// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Snapshots Badge Complex Combinations should render large fresh pill badge with icon 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-full px-3 py-1.5 text-base bg-food-fresh-100 text-food-fresh-800 border border-food-fresh-200 dark:bg-food-fresh-900/30 dark:text-food-fresh-200 dark:border-food-fresh-800"
>
  <span
    class="flex-shrink-0 w-5 h-5"
  >
    <span>
      ⭐
    </span>
  </span>
  Fresh Pill
</span>
`;

exports[`Badge Snapshots Badge Complex Combinations should render large outline golden pill badge with left icon 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-full px-3 py-1.5 text-base bg-transparent border border-food-golden-300 text-food-golden-700 dark:border-food-golden-400 dark:text-food-golden-300"
>
  <span
    class="flex-shrink-0 w-5 h-5"
  >
    <span>
      ⭐
    </span>
  </span>
  Golden Pill
</span>
`;

exports[`Badge Snapshots Badge Complex Combinations should render outline warning badge with both icons 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-transparent border border-warning-300 text-warning-700 dark:border-warning-400 dark:text-warning-300"
>
  <span
    class="flex-shrink-0 w-4 h-4"
  >
    <span>
      ⭐
    </span>
  </span>
  Warning Badge
  <span
    class="flex-shrink-0 w-4 h-4"
  >
    <span>
      ⭐
    </span>
  </span>
</span>
`;

exports[`Badge Snapshots Badge Complex Combinations should render rich removable badge with left icon 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-food-rich-100 text-food-rich-800 border border-food-rich-200 dark:bg-food-rich-900/30 dark:text-food-rich-200 dark:border-food-rich-800"
>
  <span
    class="flex-shrink-0 w-4 h-4"
  >
    <span>
      ⭐
    </span>
  </span>
  Rich Removable
  <button
    class="flex-shrink-0 rounded-full p-0.5 hover:bg-black/10 dark:hover:bg-white/10 focus:outline-none focus:ring-1 focus:ring-current w-4 h-4"
    type="button"
  >
    <svg
      class="w-full h-full"
      fill="none"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
    >
      <path
        d="M6 18L18 6M6 6l12 12"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </button>
</span>
`;

exports[`Badge Snapshots Badge Complex Combinations should render small removable success badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2 py-0.5 text-xs bg-success-50 text-success-700 border border-success-200 dark:bg-success-900/30 dark:text-success-300 dark:border-success-800"
>
  Success
  <button
    class="flex-shrink-0 rounded-full p-0.5 hover:bg-black/10 dark:hover:bg-white/10 focus:outline-none focus:ring-1 focus:ring-current w-3 h-3"
    type="button"
  >
    <svg
      class="w-full h-full"
      fill="none"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
    >
      <path
        d="M6 18L18 6M6 6l12 12"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </button>
</span>
`;

exports[`Badge Snapshots Badge Custom Props should render badge with custom attributes 1`] = `
<span
  aria-label="Custom Badge"
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-neutral-100 text-neutral-800 border border-neutral-200 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-700"
  data-testid="custom-badge"
>
  Custom Attributes
</span>
`;

exports[`Badge Snapshots Badge Custom Props should render badge with custom className 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-neutral-100 text-neutral-800 border border-neutral-200 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-700 custom-badge"
>
  Custom Badge
</span>
`;

exports[`Badge Snapshots Badge Outline Variants should render outline default badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-transparent border border-neutral-300 text-neutral-700 dark:border-neutral-600 dark:text-neutral-300"
>
  Outline Default
</span>
`;

exports[`Badge Snapshots Badge Outline Variants should render outline error badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-transparent border border-error-300 text-error-700 dark:border-error-400 dark:text-error-300"
>
  Outline Error
</span>
`;

exports[`Badge Snapshots Badge Outline Variants should render outline fresh badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-transparent border border-food-fresh-300 text-food-fresh-700 dark:border-food-fresh-400 dark:text-food-fresh-300"
>
  Outline Fresh
</span>
`;

exports[`Badge Snapshots Badge Outline Variants should render outline success badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-transparent border border-success-300 text-success-700 dark:border-success-400 dark:text-success-300"
>
  Outline Success
</span>
`;

exports[`Badge Snapshots Badge Removable should render removable badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-neutral-100 text-neutral-800 border border-neutral-200 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-700"
>
  Removable
  <button
    class="flex-shrink-0 rounded-full p-0.5 hover:bg-black/10 dark:hover:bg-white/10 focus:outline-none focus:ring-1 focus:ring-current w-4 h-4"
    type="button"
  >
    <svg
      class="w-full h-full"
      fill="none"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
    >
      <path
        d="M6 18L18 6M6 6l12 12"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </button>
</span>
`;

exports[`Badge Snapshots Badge Removable should render removable badge with left icon 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-neutral-100 text-neutral-800 border border-neutral-200 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-700"
>
  <span
    class="flex-shrink-0 w-4 h-4"
  >
    <span>
      ⭐
    </span>
  </span>
  Removable with Icon
  <button
    class="flex-shrink-0 rounded-full p-0.5 hover:bg-black/10 dark:hover:bg-white/10 focus:outline-none focus:ring-1 focus:ring-current w-4 h-4"
    type="button"
  >
    <svg
      class="w-full h-full"
      fill="none"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
    >
      <path
        d="M6 18L18 6M6 6l12 12"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </button>
</span>
`;

exports[`Badge Snapshots Badge Removable should render removable pill badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-full px-2.5 py-1 text-sm bg-neutral-100 text-neutral-800 border border-neutral-200 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-700"
>
  Removable Pill
  <button
    class="flex-shrink-0 rounded-full p-0.5 hover:bg-black/10 dark:hover:bg-white/10 focus:outline-none focus:ring-1 focus:ring-current w-4 h-4"
    type="button"
  >
    <svg
      class="w-full h-full"
      fill="none"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
    >
      <path
        d="M6 18L18 6M6 6l12 12"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </button>
</span>
`;

exports[`Badge Snapshots Badge Shapes should render default rounded badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-neutral-100 text-neutral-800 border border-neutral-200 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-700"
>
  Default Shape
</span>
`;

exports[`Badge Snapshots Badge Shapes should render pill badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-full px-2.5 py-1 text-sm bg-neutral-100 text-neutral-800 border border-neutral-200 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-700"
>
  Pill Shape
</span>
`;

exports[`Badge Snapshots Badge Sizes should render large badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-3 py-1.5 text-base bg-neutral-100 text-neutral-800 border border-neutral-200 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-700"
>
  Large
</span>
`;

exports[`Badge Snapshots Badge Sizes should render medium badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-neutral-100 text-neutral-800 border border-neutral-200 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-700"
>
  Medium
</span>
`;

exports[`Badge Snapshots Badge Sizes should render small badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2 py-0.5 text-xs bg-neutral-100 text-neutral-800 border border-neutral-200 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-700"
>
  Small
</span>
`;

exports[`Badge Snapshots Badge Status Examples should render food category badges 1`] = `
<div
  class="flex gap-2"
>
  <span
    class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-food-fresh-100 text-food-fresh-800 border border-food-fresh-200 dark:bg-food-fresh-900/30 dark:text-food-fresh-200 dark:border-food-fresh-800"
  >
    Fresh
  </span>
  <span
    class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-food-warm-100 text-food-warm-800 border border-food-warm-200 dark:bg-food-warm-900/30 dark:text-food-warm-200 dark:border-food-warm-800"
  >
    Warm
  </span>
  <span
    class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-food-rich-100 text-food-rich-800 border border-food-rich-200 dark:bg-food-rich-900/30 dark:text-food-rich-200 dark:border-food-rich-800"
  >
    Rich
  </span>
  <span
    class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-food-golden-100 text-food-golden-800 border border-food-golden-200 dark:bg-food-golden-900/30 dark:text-food-golden-200 dark:border-food-golden-800"
  >
    Golden
  </span>
</div>
`;

exports[`Badge Snapshots Badge Status Examples should render status badges collection 1`] = `
<div
  class="flex gap-2"
>
  <span
    class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-success-50 text-success-700 border border-success-200 dark:bg-success-900/30 dark:text-success-300 dark:border-success-800"
  >
    Active
  </span>
  <span
    class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-warning-50 text-warning-700 border border-warning-200 dark:bg-warning-900/30 dark:text-warning-300 dark:border-warning-800"
  >
    Pending
  </span>
  <span
    class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-error-50 text-error-700 border border-error-200 dark:bg-error-900/30 dark:text-error-300 dark:border-error-800"
  >
    Inactive
  </span>
  <span
    class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-info-50 text-info-700 border border-info-200 dark:bg-info-900/30 dark:text-info-300 dark:border-info-800"
  >
    Draft
  </span>
</div>
`;

exports[`Badge Snapshots Badge Variants should render default badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-neutral-100 text-neutral-800 border border-neutral-200 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-700"
>
  Default
</span>
`;

exports[`Badge Snapshots Badge Variants should render error badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-error-50 text-error-700 border border-error-200 dark:bg-error-900/30 dark:text-error-300 dark:border-error-800"
>
  Error
</span>
`;

exports[`Badge Snapshots Badge Variants should render fresh badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-food-fresh-100 text-food-fresh-800 border border-food-fresh-200 dark:bg-food-fresh-900/30 dark:text-food-fresh-200 dark:border-food-fresh-800"
>
  Fresh
</span>
`;

exports[`Badge Snapshots Badge Variants should render golden badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-food-golden-100 text-food-golden-800 border border-food-golden-200 dark:bg-food-golden-900/30 dark:text-food-golden-200 dark:border-food-golden-800"
>
  Golden
</span>
`;

exports[`Badge Snapshots Badge Variants should render info badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-info-50 text-info-700 border border-info-200 dark:bg-info-900/30 dark:text-info-300 dark:border-info-800"
>
  Info
</span>
`;

exports[`Badge Snapshots Badge Variants should render neutral badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-neutral-100 text-neutral-800 border border-neutral-200 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-700"
>
  Neutral
</span>
`;

exports[`Badge Snapshots Badge Variants should render rich badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-food-rich-100 text-food-rich-800 border border-food-rich-200 dark:bg-food-rich-900/30 dark:text-food-rich-200 dark:border-food-rich-800"
>
  Rich
</span>
`;

exports[`Badge Snapshots Badge Variants should render success badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-success-50 text-success-700 border border-success-200 dark:bg-success-900/30 dark:text-success-300 dark:border-success-800"
>
  Success
</span>
`;

exports[`Badge Snapshots Badge Variants should render warm badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-food-warm-100 text-food-warm-800 border border-food-warm-200 dark:bg-food-warm-900/30 dark:text-food-warm-200 dark:border-food-warm-800"
>
  Warm
</span>
`;

exports[`Badge Snapshots Badge Variants should render warning badge 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-warning-50 text-warning-700 border border-warning-200 dark:bg-warning-900/30 dark:text-warning-300 dark:border-warning-800"
>
  Warning
</span>
`;

exports[`Badge Snapshots Badge with Icons should render badge with both icons 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-neutral-100 text-neutral-800 border border-neutral-200 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-700"
>
  <span
    class="flex-shrink-0 w-4 h-4"
  >
    <span>
      ⭐
    </span>
  </span>
  Both Icons
  <span
    class="flex-shrink-0 w-4 h-4"
  >
    <span>
      ⭐
    </span>
  </span>
</span>
`;

exports[`Badge Snapshots Badge with Icons should render badge with left icon 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-neutral-100 text-neutral-800 border border-neutral-200 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-700"
>
  <span
    class="flex-shrink-0 w-4 h-4"
  >
    <span>
      ⭐
    </span>
  </span>
  Left Icon
</span>
`;

exports[`Badge Snapshots Badge with Icons should render badge with right icon 1`] = `
<span
  class="inline-flex items-center gap-1.5 font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 rounded-lg px-2.5 py-1 text-sm bg-neutral-100 text-neutral-800 border border-neutral-200 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-700"
>
  Right Icon
  <span
    class="flex-shrink-0 w-4 h-4"
  >
    <span>
      ⭐
    </span>
  </span>
</span>
`;
